data/apps/argocd/minio/minio-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: minio
  name: minio
  labels:
    component: minio
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: minio
  template:
    metadata:
      labels:
        component: minio
    spec:
      volumes:
      - name: storage
        hostPath:
          path: /mnt/disk1/data
          type: DirectoryOrCreate
      - name: config
        hostPath:
          path: /mnt/disk2/data
          type: DirectoryOrCreate
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command:
        - /bin/bash
        - -c
        args:
        - minio server /storage --config-dir=/config --console-address :9090
        volumeMounts:
        - mountPath: /storage
          name: storage
        - mountPath: /config
          name: config
---
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  name: minio
  labels:
    component: minio
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    component: minio
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
  namespace: minio
spec:
  hostnames:
  - minio.xxx.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: minio
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
